feat: track cruises with their ports of call, in Stats too (#62)
